--- a/pamyo.html
+++ b/pamyo.html
@@ -8,6 +8,7 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-P5MQZ5LK');</script>
   <!-- End Google Tag Manager -->
+
   <meta charset="utf-8"/>
   <title>파묘 시리즈 - 영화 파묘 1편 요약 & 2편 금룡의 길 소개</title>
   <meta name="description" content="무당 이화림, 지관 김상덕 일행이 한국과 미국을 오가며 벌이는 신비로운 모험! 영화 파묘 1편 줄거리 요약과 2편 금룡의 길 줄거리 소개. 백두대간과 7개 쇠말뚝, 7신령의 비밀을 파헤치는 상덕 일행의 여정을 만나보세요.">
@@ -19,42 +20,253 @@
   <meta property="og:image" content="https://example.com/images/pamyo-series.jpg">
   <meta property="og:url" content="https://example.com/pamyo-series">
   <link rel="canonical" href="https://example.com/pamyo-series">
+
   <style>
-    /* 기존 스타일 코드 유지 */
-  </style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #cac7c7;
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+    }
+
+    main {
+      margin: 2rem auto;
+      max-width: 1200px;
+      padding: 0 1rem;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+      padding: 2rem;
+      font-size: 18px;
+    }
+
+    @media screen and (max-width: 600px) {
+      main {
+        font-size: 16px;
+      }
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      margin-bottom: 10px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+
+    footer {
+      background-color: #f8f9fa;
+      padding: 20px;
+      text-align: center;
+      width: 100%;
+    }
+
+    .home-button {
+      display: inline-block;
+      padding: 20px 100px;
+      font-size: 32px;
+      color: white;
+      background-color: blue;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+    }
+
+    .home-button:hover {
+      background-color: darkblue;
+    }
+
+    .circle {
+      position: absolute;
+      height: 100px;
+      width: 100px;
+      border-radius: 50%;
+      border: 5px solid;
+      animation: circleFadeOut 1s forwards;
+    }
+
+    @keyframes circleFadeOut {
+      from {transform: scale(0.5); opacity: 1;}
+      to {transform: scale(1.5); opacity: 0;}
+    }
+
+    .message {
+      position: absolute;
+      font-size: 20px;
+      color: red;
+      animation: messageFadeOut 1s forwards;
+    }
+
+    @keyframes messageFadeOut {
+      from {opacity: 1;}
+      to {opacity: 0;}
+    }
+
+    .title-container {
+    position: relative; /* 상대 위치 설정 */
+    height: 3em;
+    overflow: hidden;
+    background-color: #f1f1f1;
+    color: #333;
+    font-size: 1.5em;
+    }
+
+    .title-container ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    animation: rotate 20s linear infinite;
+    }
+
+    .title-container li {
+    line-height: 1.2em;
+    white-space: nowrap;
+    border: none;
+    }
+
+    .show-all-button {
+    position: absolute; /* 절대 위치 설정 */
+    top: 0;
+    right: 0;
+    padding: 0.5em 1em;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 1.3em; /* 글자 크기를 2배로 설정 */
+    }
+    @keyframes rotate {
+    0% { transform: translateY(0); }
+    5.55% { transform: translateY(-1.2em); }
+    11.11% { transform: translateY(-2.4em); }
+    16.66% { transform: translateY(-3.6em); }
+    22.22% { transform: translateY(-4.8em); }
+    27.77% { transform: translateY(-6em); }
+    33.33% { transform: translateY(-7.2em); }
+    38.88% { transform: translateY(-8.4em); }
+    44.44% { transform: translateY(-9.6em); }
+    50% { transform: translateY(-10.8em); }
+    55.55% { transform: translateY(-12em); }
+    61.11% { transform: translateY(-13.2em); }
+    66.66% { transform: translateY(-14.4em); }
+    72.22% { transform: translateY(-15.6em); }
+    77.77% { transform: translateY(-16.8em); }
+    83.33% { transform: translateY(-18em); }
+    88.88% { transform: translateY(-19.2em); }
+    94.44% { transform: translateY(-20.4em); }
+    100% { transform: translateY(-21.6em); }
+  }
+</style>
+    </style>
 </head>
 <body>
   <header>
     <a class="home-button" href="index.html">Home</a>
-    <h1>파묘 시리즈 - 영화 파묘 1편 요약 & 2편 금룡의 길 소개</h1>
+    <h1>인공지능과 함께 쓰는 소설</h1>
     <div class="title-container">
       <ul>
-        <li><a href="#title2">금룡의 길을 찾아서 - 백두대간과 일곱 신령을 둘러싼 상덕 일행의 모험</a></li>
-        <li><a href="#title1">영화 파묘 1편 전체 내용 완벽 요약</a></li>
+        <!-- <li><a href="#title19">손상된 데크 페인트를 벗겨내다.</a></li>
+        <li><a href="#title18">라일락나무 가지치기를 했더니 앙상해졌다.</a></li>
+        <li><a href="#title17">큰애 대학교 졸업식이 있는 날이다</a></li>
+        <li><a href="#title16">잔디 일병 구하기</a></li>
+        <li><a href="#title15">10년이 넘게 우리와 함께하고 있는 우리가족의 첫번째 차</a></li>
+        <li><a href="#title14">개미 통로를 막아라.</a></li>
+        <li><a href="#title13">지붕에서 떨어질뻔 하다.</a></li>
+        <li><a href="#title12">아내가 방충망을 고친다.</a></li>
+        <li><a href="#title11">골프치기 좋은 날</a></li>
+        <li><a href="#title10">추억의 붕어빵</a></li>
+        <li><a href="#title9">나무도 자연 그대로의 멋이 있지 않을까?</a></li>
+        <li><a href="#title8">아내가 술을 마신다</a></li>
+        <li><a href="#title7">골프 공 속살이 궁금하다.</a></li>
+        <li><a href="#title6">골프 네트가 썰렁하다.</a></li>
+        <li><a href="#title5">딸이 집에 왔다</a></li>
+        <li><a href="#title4">뱀과 메리의 사랑?</a></li>
+        <li><a href="#title3">꽃봉우리.. 봄이다..</a></li>
+        <li><a href="#title2">삼성 세탁기 설치</a></li> -->
+        <li><a href="#title1">골프 (Fox Hills Classic)</a></li>
       </ul>
-      <button class="show-all-button">전체보기</button>
+      <button class="show-all-button">전체보기</button> <!-- 전체보기 버튼 추가 -->
     </div>
   </header>
   <main>
-    <section>
-      <ul>
-        <li id="title2">
-          <h2>금룡의 길을 찾아서 - 백두대간과 일곱 신령을 둘러싼 상덕 일행의 모험</h2>
-          <p>영화 파묘 2편 금룡의 길에서는 김상덕, 이화림, 윤봉길, 고영근 일행이 한반도 혈맥인 백두대간에 숨겨진 7개의 쇠말뚝과 그에 봉인된 7신령의 비밀을 파헤치는 여정이 그려집니다. 나라를 지키려 목숨 바친 영웅들의 넋을 달래고 금룡의 기운을 되찾아야 하는 숙명의 모험! 상덕 일행은 무사히 금룡의 길을 열 수 있을까요?</p>
-          <a href="novel/pamyo/pamyo sub 20240508_01.html" target="_blank">2024년4월21일 영화 2편 1장 바로가기</a>
-        </li>
-        <li id="title1">
-          <h2>영화 파묘 1편 전체 내용 완벽 요약</h2>
-          <p>영화 파묘 1편은 무당 이화림, 지관 김상덕, 장의사 고영근 등이 미국과 한국을 오가며 의뢰인 박지용 집안에 얽힌 저주와 맞서 싸우는 이야기입니다. 사건의 원흉으로 밝혀진 악령 오니를 무찌르고 평화를 되찾지만, 상덕 일행에겐 새로운 모험이 기다리고 있었으니...</p>  
-          <a href="novel/pamyo/pamyo sub 20240508_00.html" target="_blank">2024년4월21일 영화 1편 다시보기</a>
-        </li>
-      </ul>
-    </section>     
+    
+
+
+      <section>
+        <ul>
+          <li id="title2">
+            <h2>금룡의 길을 찾아서 - 백두대간과 일곱 신령을 둘러싼 상덕 일행의 모험</h2>
+            <p>영화 파묘 2편 금룡의 길에서는 김상덕, 이화림, 윤봉길, 고영근 일행이 한반도 혈맥인 백두대간에 숨겨진 7개의 쇠말뚝과 그에 봉인된 7신령의 비밀을 파헤치는 여정이 그려집니다. 나라를 지키려 목숨 바친 영웅들의 넋을 달래고 금룡의 기운을 되찾아야 하는 숙명의 모험! 상덕 일행은 무사히 금룡의 길을 열 수 있을까요?</p>
+            <a href="novel/pamyo/pamyo sub 20240508_01.html" target="_blank">2024년4월21일 영화 2편 1장 바로가기</a>
+          </li>
+          <li id="title1">
+            <h2>영화 파묘 1편 전체 내용 완벽 요약</h2>
+            <p>영화 파묘 1편은 무당 이화림, 지관 김상덕, 장의사 고영근 등이 미국과 한국을 오가며 의뢰인 박지용 집안에 얽힌 저주와 맞서 싸우는 이야기입니다. 사건의 원흉으로 밝혀진 악령 오니를 무찌르고 평화를 되찾지만, 상덕 일행에겐 새로운 모험이 기다리고 있었으니...</p>  
+            <a href="novel/pamyo/pamyo sub 20240508_00.html" target="_blank">2024년4월21일 영화 1편 다시보기</a>
+          </li>
+        </ul>
+      </section> 
+
+    
   </main>
   <footer>
     © 2023~2024 Brunch. All rights reserved.
     <a href="mailto:stberry7@gmail.com?subject=Hello&amp;body=Nice%20to%20meet%20you">Email me</a>
   </footer>
-  <!-- 기존 스크립트 코드 유지 -->
+
+  <script>
+    var clickCount = 0;
+  </script>
+
+  <script>
+    var colors = ['#ffb3ba', '#ffdfba', '#ffffba', '#baffc9', '#bae1ff'];
+
+    document.addEventListener('click', function(event) {
+      if (event.clientX < 30 || event.clientX > window.innerWidth - 30 ||
+          event.clientY < 30 || event.clientY > window.innerHeight - 30) {
+          return;
+      }
+      for (var i = 0; i < 10; i++) {
+          var firework = document.createElement('div');
+          firework.className = 'firework';
+          firework.style.top = (event.clientY - 0.5) + 'px';
+          firework.style.left = (event.clientX - 0.5) + 'px';
+          firework.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+          firework.style.transform = 'translate(' + (Math.random() * 200 - 100) + 'px, ' + (Math.random() * 200 - 100) + 'px)';
+          document.body.appendChild(firework);
+          setTimeout(function() {
+              document.body.removeChild(firework);
+          }, 3000);
+      }
+    });
+  </script>
+
+  <script>
+    const titleContainer = document.querySelector('.title-container');
+    const titleList = document.querySelector('.title-container ul');
+    const showAllButton = document.querySelector('.show-all-button');
+
+    showAllButton.addEventListener('click', () => {
+      if (titleContainer.style.height === 'auto') {
+        titleContainer.style.height = '3em';
+        showAllButton.textContent = '전체보기';
+      } else {
+        titleContainer.style.height = 'auto';
+        showAllButton.textContent = '닫기';
+      }
+    });
+  </script>
 </body>
 </html>
