--- a/pamyo.html
+++ b/pamyo.html
@@ -177,25 +177,8 @@
     <h1>인공지능과 함께 쓰는 소설</h1>
     <div class="title-container">
       <ul>
-        <!-- <li><a href="#title19">손상된 데크 페인트를 벗겨내다.</a></li>
-        <li><a href="#title18">라일락나무 가지치기를 했더니 앙상해졌다.</a></li>
-        <li><a href="#title17">큰애 대학교 졸업식이 있는 날이다</a></li>
-        <li><a href="#title16">잔디 일병 구하기</a></li>
-        <li><a href="#title15">10년이 넘게 우리와 함께하고 있는 우리가족의 첫번째 차</a></li>
-        <li><a href="#title14">개미 통로를 막아라.</a></li>
-        <li><a href="#title13">지붕에서 떨어질뻔 하다.</a></li>
-        <li><a href="#title12">아내가 방충망을 고친다.</a></li>
-        <li><a href="#title11">골프치기 좋은 날</a></li>
-        <li><a href="#title10">추억의 붕어빵</a></li>
-        <li><a href="#title9">나무도 자연 그대로의 멋이 있지 않을까?</a></li>
-        <li><a href="#title8">아내가 술을 마신다</a></li>
-        <li><a href="#title7">골프 공 속살이 궁금하다.</a></li>
-        <li><a href="#title6">골프 네트가 썰렁하다.</a></li>
-        <li><a href="#title5">딸이 집에 왔다</a></li>
-        <li><a href="#title4">뱀과 메리의 사랑?</a></li>
-        <li><a href="#title3">꽃봉우리.. 봄이다..</a></li>
-        <li><a href="#title2">삼성 세탁기 설치</a></li> -->
-        <li><a href="#title1">골프 (Fox Hills Classic)</a></li>
+        <li><a href="#title2">백두대간과 일곱 신령을 둘러싼 상덕 일행의 모험</a></li>
+        <li><a href="#title1">영화 파묘 1편 전체 내용 완벽 요약</a></li>
       </ul>
       <button class="show-all-button">전체보기</button> <!-- 전체보기 버튼 추가 -->
     </div>
