--- a/pamyo.html
+++ b/pamyo.html
@@ -127,7 +127,7 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
-    animation: rotate 20s linear infinite;
+    animation: rotate 50s linear infinite;
     }
 
     .title-container li {
@@ -177,6 +177,7 @@
     <h1>인공지능과 함께 쓰는 소설</h1>
     <div class="title-container">
       <ul>
+        <li><a href="#title3">백두대간 기운의 부활</a></li>
         <li><a href="#title2">백두대간과 일곱 신령을 둘러싼 상덕 일행의 모험</a></li>
         <li><a href="#title1">영화 파묘 1편 전체 내용 완벽 요약</a></li>
       </ul>
@@ -189,10 +190,15 @@
 
       <section>
         <ul>
+          <li id="title3">
+            <h2>영화 파묘 2편 2장 : 백두대간 기운의 부활</h2>
+            <p>강력한 신령들의 도움으로 산신령을 구출해 백두대간의 기운을 회복한 네 명의 용사들이 평화로운 미래를 맞이하는 판타지 모험 이야기</p>
+            <a href="novel/pamyo/pamyo sub 20240509_01.html" target="_blank">영화 2편 2장 바로가기</a>
+          </li>
           <li id="title2">
-            <h2>금룡의 길을 찾아서 - 백두대간과 일곱 신령을 둘러싼 상덕 일행의 모험</h2>
+            <h2>영화 파묘 2편 1장 : 백두대간과 일곱 신령을 둘러싼 상덕 일행의 모험</h2>
             <p>영화 파묘 2편 금룡의 길에서는 김상덕, 이화림, 윤봉길, 고영근 일행이 한반도 혈맥인 백두대간에 숨겨진 7개의 쇠말뚝과 그에 봉인된 7신령의 비밀을 파헤치는 여정이 그려집니다. 나라를 지키려 목숨 바친 영웅들의 넋을 달래고 금룡의 기운을 되찾아야 하는 숙명의 모험! 상덕 일행은 무사히 금룡의 길을 열 수 있을까요?</p>
-            <a href="novel/pamyo/pamyo sub 20240508_01.html" target="_blank">2024년4월21일 영화 2편 1장 바로가기</a>
+            <a href="novel/pamyo/pamyo sub 20240508_01.html" target="_blank">영화 2편 1장 바로가기</a>
           </li>
           <li id="title1">
             <h2>영화 파묘 1편 전체 내용 완벽 요약</h2>
