--- a/pamyo.html
+++ b/pamyo.html
@@ -193,6 +193,12 @@
       <section>
         <ul>
           <li id="title5">
+            <h2>세종대왕이 왜 맥북프로를 던졌나?</h2>
+            
+            <a href="novel/pamyo/pamyo sub 20240501_01.html" target="_blank">세종대왕 맥북프로를 던진 사건</a>
+          </li>
+
+          <li id="title5">
             <h2>파묘 영화 2부 4장 - 백두대간 기운의 완성</h2>
             
             <a href="novel/pamyo/pamyo sub 20240509_04.html" target="_blank">영화 2편 2장 바로가기</a>
