--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             <a href="brunch EN.html">Daily Life</a>
         </div>
         <div class="sidebar-row">
-            <a href="pamyo.html">영화 파묘 2탄</a>
-            <a href="pamyo EN.html">Exhumation</a>
+            <a href="pamyo.html">소설</a>
+            <a href="pamyo.html">Novel</a>
         </div>
         <div class="sidebar-row">
             <a href="usa.html">미국생활</a>
