--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
     </div>
     <div class="content">
-    <script>
+    <!-- <script>
        var clickCount = 0;
     document.addEventListener('click', function(e){
     var numCircles = 1;
@@ -252,7 +252,7 @@
         }, 3000);
     }
     });
-    </script>
+    </script> -->
     <footer class="footer"><p>Copyright © 2023~2024 </p></footer>
     <script>
     document.addEventListener('click', function(e){
