--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <p><strong></strong></p>
         <p></p>
       </div>
-      <script>
+      <!-- <script>
         window.onload = function() {
           var images = [];
           
@@ -327,7 +327,7 @@
           img.src = images[randomIndex];
           document.querySelector('.notice-box').style.display = 'block';
         };
-        </script>
+        </script> -->
     </body>
     </html></document_content>
     </document>
