--- a/brunch.html
+++ b/brunch.html
@@ -200,8 +200,8 @@
 
         <li id="title20">
           <h3>고장 난 천장 팬을 고치다.</h3>    
-                  <a href="brunch/diary/brunch sub 20240507_01.html" target="_blank"> 2024년5월13일 월요일 일기 바로가기<br><br>
-                      <img src="image/brunch/20240513_fan3.jpeg" alt="천장 팬 타이틀" width="100%">
+                  <a href="brunch/diary/brunch sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 일기 바로가기<br><br>
+                      <img src="image/brunch/20240513_fan3.jpg" alt="천장 팬 타이틀" width="100%">
                   </a>
               </li>
 
