--- a/brunch/diary/brunch sub 20240513_01.html
+++ b/brunch/diary/brunch sub 20240513_01.html
@@ -26,9 +26,9 @@
         <article>
             <h2>2024년 5월 13일 월요일, 고장 난 천장 팬을 고치다</h2>
             <p>Written by Claude 3.0 Opus</p>
-        <img src="../../image/brunch/20240513_fan1.jpeg" alt="천장 팬 배선 작업 모습 1" width="100%">
-        <img src="../../image/brunch/20240513_fan2.jpeg" alt="천장 팬 배선 작업 모습 2" width="100%"> 
-        <img src="../../image/brunch/20240513_fan3.jpeg" alt="천장 팬 타이틀" width="100%">
+        <img src="../../image/brunch/20240513_fan1.jpg" alt="천장 팬 배선 작업 모습 1" width="100%">
+        <img src="../../image/brunch/20240513_fan2.jpg" alt="천장 팬 배선 작업 모습 2" width="100%"> 
+        <img src="../../image/brunch/20240513_fan3.jpg" alt="천장 팬 타이틀" width="100%">
 
         오늘은 정말 의미 있는 하루였다. 한 달 넘게 고장 나 있던 천장 팬을 드디어 고쳤기 때문이다. 몇달전부터 계속 신경 쓰이던 문제였는데, 이제야 해결이 되니 마음이 한결 가볍다. <br><br>
         천장 팬 스위치가 고장 난 지는 꽤 오래되었다. 정확히 기억은 나지 않지만 적어도 한 달은 넘은 것 같다. 이 팬은 Hunter라는 미국의 유서 깊은 브랜드 제품인데, 가격대가 상당히 높은 축에 속하는 모델이었다. 내가 이 집을 구매할 당시에 이미 설치되어 있던 것을 그대로 사용하고 있었는데, 어찌 된 영문인지 몇 주 전부터 벽 스위치에 문제가 발생한 것이다.<br><br>
