--- a/brunch/diary/brunch sub 20240513_01.html
+++ b/brunch/diary/brunch sub 20240513_01.html
@@ -26,8 +26,7 @@
         <article>
             <h2>2024년 5월 13일 월요일, 고장 난 천장 팬을 고치다</h2>
             <p>Written by Claude 3.0 Opus</p>
-        <img src="../../image/brunch/20240513_fan1.jpg" alt="천장 팬 배선 작업 모습 1" width="100%">
-        <img src="../../image/brunch/20240513_fan2.jpg" alt="천장 팬 배선 작업 모습 2" width="100%"> 
+
         <img src="../../image/brunch/20240513_fan3.jpg" alt="천장 팬 타이틀" width="100%">
 
         오늘은 정말 의미 있는 하루였다. 한 달 넘게 고장 나 있던 천장 팬을 드디어 고쳤기 때문이다. 몇달전부터 계속 신경 쓰이던 문제였는데, 이제야 해결이 되니 마음이 한결 가볍다. <br><br>
@@ -37,7 +36,12 @@
         막막한 상황이었지만 어떻게든 한번 고쳐보기로 마음먹었다. 별수 있나, 더 이상 지체할 수만은 없는 노릇이었다.<br><br>
         며칠 전, 아마존에서 유사한 형태의 스위치를 발견했다. 가격은 20달러 정도였다. 일단 주문을 넣고 기다렸다. 반은 설렘, 반은 걱정이었다. 과연 잘 고쳐질까, 혹시 더 큰 문제를 일으키는 건 아닐까.<br><br>
         주문한 지 일주일 만에 물건을 받을 수 있었다. 오늘 본격적으로 교체 작업에 돌입했다.<br><br>
-        먼저 팬 스위치 덮개를 몇 개의 나사를 풀어 분리했다. 그런데 배선 구조가 보던 것과는 사뭇 달랐다. 아뿔싸, 이게 무슨 일인가 싶었다. 색깔도 굵기도 다르고 연결된 위치도 복잡했다. 기존의 배선도 별반 다를 것 없이 알쏭달쏭했다.<br><br>
+        먼저 팬 스위치 덮개를 몇 개의 나사를 풀어 분리했다. 그런데 배선 구조가 보던 것과는 사뭇 달랐다. 
+        
+        <img src="../../image/brunch/20240513_fan1.jpg" alt="천장 팬 배선 작업 모습 1" width="100%">
+        <img src="../../image/brunch/20240513_fan2.jpg" alt="천장 팬 배선 작업 모습 2" width="100%"> 
+
+        아뿔싸, 이게 무슨 일인가 싶었다. 색깔도 굵기도 다르고 연결된 위치도 복잡했다. 기존의 배선도 별반 다를 것 없이 알쏭달쏭했다.<br><br>
         처음 보는 검은 전선 두 가닥이 벽에서 튀어나와 있었는데, 이것이 도대체 어디에 연결해야 할지 알 수가 없었다. 멀티미터기를 가져다가 저항을 측정해 보았지만 뾰족한 수가 나오지 않았다.<br><br>
         인터넷을 뒤져가며 비슷한 사례를 검색해 봤지만, 내 경우와 똑 같은 것은 없었다. 고작 나오는 것이라곤 추상적인 수준의 배선도 뿐이었다. 알 수 없는 배선들과, 어디에 연결해야 할지 모를 신품 스위치를 마주한 채 한참을 멍하니 쳐다만 보고 있었다.<br><br>
         그러다가 맨땅에 헤딩을 하기로 했다. 지금 상황에서 제일 명확한 해결책은 직접 연결해 보는 것이다. 닥치는 대로, 그냥 끼워 보자. 내심 겁이 났지만 용기를 내기로 했다.<br><br>
