--- a/brunch.html
+++ b/brunch.html
@@ -169,7 +169,8 @@
     <h1>인공지능과 함께 쓰는 일기</h1>
     <div class="title-container">
       <ul>
-        <li><a href="#title20">고장 난 천장 팬을 고치다.</a></li>
+        <li><a href="#title21">고장 난 천장 팬을 고치다.</a></li>
+        <li><a href="#title20">고장 난 포드 에스케이프 헤드라이트 교체하다.</a></li>
         <li><a href="#title19">손상된 데크 페인트를 벗겨내다.</a></li>
         <li><a href="#title18">라일락나무 가지치기를 했더니 앙상해졌다.</a></li>
         <li><a href="#title17">큰애 대학교 졸업식이 있는 날이다</a></li>
@@ -198,10 +199,17 @@
       <ul>
 
 
-        <li id="title20">
+        <li id="title21">
           <h3>고장 난 천장 팬을 고치다.</h3>    
                   <a href="brunch/diary/brunch sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 일기 바로가기<br><br>
                       <img src="image/brunch/20240513_fan3.jpg" alt="천장 팬 타이틀" width="100%">
+                  </a>
+              </li>
+
+        <li id="title20">
+          <h3>고장 난 포드 에스케이프 헤드라이트 교체하다.</h3>    
+                  <a href="brunch/diary/brunch sub 20240512_01.html" target="_blank"> 2024년5월12일 일요일 일기 바로가기<br><br>
+                      <img src="image/brunch/20240512_lamp1.jpg" alt="포드 에스케이프 헤드라이트" width="100%">
                   </a>
               </li>
 
