--- a/AI_News.html
+++ b/AI_News.html
@@ -27,15 +27,17 @@
             text-align: center;
         }
 
+        <style>
         main {
             margin: 2rem auto;
-            max-width: 1200px;
+            max-width: 100%;
             padding: 0 1rem;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
             padding: 2rem;
             font-size: 40px;
+            width: 100%;
         }
             @media screen and (max-width: 768px) {
             main {
