--- a/brunch.html
+++ b/brunch.html
@@ -16,6 +16,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      font-size: 2em;
       line-height: 1.6;
       margin: 0;
       padding: 0;
