--- a/brunch.html
+++ b/brunch.html
@@ -36,7 +36,7 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       border-radius: 5px;
       padding: 2rem;
-      font-size: 16px;
+      font-size: 32px;
     }
 
     @media screen and (max-width: 600px) {
@@ -160,8 +160,12 @@
     94.44% { transform: translateY(-20.4em); }
     100% { transform: translateY(-21.6em); }
   }
+
+  .larger-text {
+    font-size: 1.5em;
+  }
+
 </style>
-    </style>
 </head>
 <body>
   <header>
@@ -198,177 +202,158 @@
   <main>
     <section>
       <ul>
-
-
-        <li id="title22">
+        <li id="title22" class="larger-text">
           <h3>고장 난 천장 팬을 고치다.</h3>    
-                  <a href="brunch/diary/brunch sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 일기 바로가기<br><br>
-                      <img src="image/brunch/20240513_fan3.jpg" alt="천장 팬 타이틀" width="100%">
-                  </a>
-              </li>
-
-              <li id="title21">
-                <h3>딸과 함께한 행복한 골프 데이트</h3>    
-                        <a href="brunch/diary/brunch sub 20240512_01.html" target="_blank"> 2024년5월12일 일요일 일기 바로가기<br><br>
-                            <img src="image/brunch/20240512_golf.jpg" alt="딸과 함께한 행복한 골프 데이트" width="100%">
-                        </a>
-                    </li>
-
-        <li id="title20">
-          <h3>고장 난 포드 에스케이프 헤드라이트 교체하다.</h3>    
-                  <a href="brunch/diary/brunch sub 20240512_01.html" target="_blank"> 2024년5월12일 일요일 일기 바로가기<br><br>
-                      <img src="image/brunch/20240512_lamp1.jpg" alt="포드 에스케이프 헤드라이트" width="100%">
-                  </a>
-              </li>
-
-
-        <li id="title19">
-          <h3>손상된 데크 페인트를 벗겨내다.</h3>    
-                  <a href="brunch/diary/brunch sub 20240507_01.html" target="_blank"> 2024년5월07일 화요일 일기 바로가기<br><br>
-                      <img src="image/brunch/20240507_deck1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-                  </a>
-              </li>
-
-        <li id="title18">
-        <h3>라일락나무 가지치기를 했더니 앙상해졌다.</h3>    
-                <a href="brunch/diary/brunch sub 20240504_02.html" target="_blank"> 2024년5월04일 토요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240504_tree2.png" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title17">
-        <h3>큰애 대학교 졸업식이 있는 날이다</h3>    
-                <a href="brunch/diary/brunch sub 20240504_01.html" target="_blank"> 2024년5월04일 토요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240504_grad2.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-                </a>
-
-        <li id="title16"></li>
-        <h3>잔디 일병 구하기</h3>    
-                <a href="brunch/diary/brunch sub 20240502_01.html" target="_blank"> 2024년5월02일 목요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240502_grass.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-                </a>
-
-        <li id="title15">
-        <h3>10년이 넘게 우리와 함께하고 있는 우리가족의 첫번째 차</h3>    
-                <a href="brunch/diary/brunch sub 20240501_03.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240501_ford.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-                </a>
-
-
-        <li id="title14"></li>
-        <h3>개미 통로를 막아라.</h3>    
-                <a href="brunch/diary/brunch sub 20240501_02.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240501_tile1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-                </a>
-
-
-        <li id="title13"></li>
-        <h3>지붕에서 떨어질뻔 하다.</h3>    
-                <a href="brunch/diary/brunch sub 20240501_01.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240501_roof.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title12">
-        <h3>아내가 방충망을 고친다.</h3>    
-                <a href="brunch/diary/brunch sub 20240429_01.html" target="_blank"> 2024년4월29일 월요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240429_bug.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title11">
-        <h3>골프치기 좋은 날</h3>    
-                <a href="brunch/diary/brunch sub 20240427_01.html" target="_blank"> 2024년4월27일 토요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240427_golfcourse.jpeg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title10">
-        <h3>추억의 붕어빵</h3>    
-                <a href="brunch/diary/brunch sub 20240426_03.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240426 fish.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title9">
-        <h3>나무도 자연 그대로의 멋이 있지 않을까?</h3>    
-        <h3>업데이트 : 나무가 초라해져버렸다</h3>    
-                <a href="brunch/diary/brunch sub 20240426_02.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240426 tree.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title8">
-        <h3>아내가 술을 마신다</h3>    
-                <a href="brunch/diary/brunch sub 20240426_01.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
-                    <img src="image/brunch/wine1.png" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title7">
-                <h3>
-            골프 공 속살이 궁금하다.
-            </h3>    
-                <a href="brunch/diary/brunch sub 20240425_03.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
-                    <img src="image/brunch/golfballinside1.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title6">
-        <h3>
-            골프 네트가 썰렁하다.
-            </h3>    
-                <a href="brunch/diary/brunch sub 20240425_02.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
-                    <img src="image/brunch/golfnet1.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title5">
-        <h3>
-            딸이 집에 왔다
-            </h3>    
-                <a href="brunch/diary/brunch sub 20240425_01.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
-                    <img src="image/brunch/bluebag1.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title4">
-        <h3>
-            뱀과 메리의 사랑?
-            </h3>
-
-                <a href="brunch/diary/brunch sub 0004.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
-                    <img src="image/brunch/snake.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title3">
-                <h3>
-            꽃봉우리.. 봄이다..
-            </h3>
-
-                <a href="brunch/diary/brunch sub 0003.html" target="_blank"> 2024년4월23일 화요일 일기 바로가기<br><br>
-                    <img src="image/brunch/babyflower.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-                </a>
-            </li>
-
-        <li id="title2">
-        <h3>
-            삼성 세탁기 설치 
-            </h3>
-            
-            <a href="brunch/diary/brunch sub 0002.html" target="_blank"> 2024년4월22일 월요일 일기 바로가기<br><br>
-                <img src="image/brunch/washer.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-            </a>
+          <a href="brunch/diary/brunch sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240513_fan3.jpg" alt="천장 팬 타이틀" width="100%">
+          </a>
         </li>
 
-        <li id="title1">
-        <h3>
-            골프 (Fox Hills Classic)
-        
-            <a href="brunch/diary/brunch sub 0001.html" target="_blank"> 2024년4월21일 일요일 일기 바로가기<br><br>
-                <img src="image/brunch/foxhills.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-            </a>
+        <li id="title21" class="larger-text">
+          <h3>딸과 함께한 행복한 골프 데이트</h3>    
+          <a href="brunch/diary/brunch sub 20240512_02.html" target="_blank"> 2024년5월12일 일요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240512_golf.jpg" alt="딸과 함께한 행복한 골프 데이트" width="100%">
+          </a>
+        </li>
+
+        <li id="title20" class="larger-text">
+          <h3>고장 난 포드 에스케이프 헤드라이트 교체하다.</h3>    
+          <a href="brunch/diary/brunch sub 20240512_01.html" target="_blank"> 2024년5월12일 일요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240512_lamp1.jpg" alt="포드 에스케이프 헤드라이트" width="100%">
+          </a>
+        </li>
+
+        <li id="title19" class="larger-text">
+          <h3>손상된 데크 페인트를 벗겨내다.</h3>    
+          <a href="brunch/diary/brunch sub 20240507_01.html" target="_blank"> 2024년5월07일 화요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240507_deck1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title18" class="larger-text">
+          <h3>라일락나무 가지치기를 했더니 앙상해졌다.</h3>    
+          <a href="brunch/diary/brunch sub 20240504_02.html" target="_blank"> 2024년5월04일 토요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240504_tree2.png" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title17" class="larger-text">
+          <h3>큰애 대학교 졸업식이 있는 날이다</h3>    
+          <a href="brunch/diary/brunch sub 20240504_01.html" target="_blank"> 2024년5월04일 토요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240504_grad2.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title16" class="larger-text">
+          <h3>잔디 일병 구하기</h3>    
+          <a href="brunch/diary/brunch sub 20240502_01.html" target="_blank"> 2024년5월02일 목요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240502_grass.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title15" class="larger-text">
+          <h3>10년이 넘게 우리와 함께하고 있는 우리가족의 첫번째 차</h3>    
+          <a href="brunch/diary/brunch sub 20240501_03.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240501_ford.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title14" class="larger-text">
+          <h3>개미 통로를 막아라.</h3>    
+          <a href="brunch/diary/brunch sub 20240501_02.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240501_tile1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title13" class="larger-text">
+          <h3>지붕에서 떨어질뻔 하다.</h3>    
+          <a href="brunch/diary/brunch sub 20240501_01.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240501_roof.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title12" class="larger-text">
+          <h3>아내가 방충망을 고친다.</h3>    
+          <a href="brunch/diary/brunch sub 20240429_01.html" target="_blank"> 2024년4월29일 월요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240429_bug.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title11" class="larger-text">
+          <h3>골프치기 좋은 날</h3>    
+          <a href="brunch/diary/brunch sub 20240427_01.html" target="_blank"> 2024년4월27일 토요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240427_golfcourse.jpeg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title10" class="larger-text">
+          <h3>추억의 붕어빵</h3>    
+          <a href="brunch/diary/brunch sub 20240426_03.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240426 fish.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title9" class="larger-text">
+          <h3>나무도 자연 그대로의 멋이 있지 않을까?</h3>    
+          <a href="brunch/diary/brunch sub 20240426_02.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240426 tree.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title8" class="larger-text">
+          <h3>아내가 술을 마신다</h3>    
+          <a href="brunch/diary/brunch sub 20240426_01.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
+              <img src="image/brunch/wine1.png" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title7" class="larger-text">
+          <h3>골프 공 속살이 궁금하다.</h3>    
+          <a href="brunch/diary/brunch sub 20240425_03.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
+              <img src="image/brunch/golfballinside1.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title6" class="larger-text">
+          <h3>골프 네트가 썰렁하다.</h3>    
+          <a href="brunch/diary/brunch sub 20240425_02.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
+              <img src="image/brunch/golfnet1.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title5" class="larger-text">
+          <h3>딸이 집에 왔다</h3>    
+          <a href="brunch/diary/brunch sub 20240425_01.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
+              <img src="image/brunch/bluebag1.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title4" class="larger-text">
+          <h3>뱀과 메리의 사랑?</h3>
+          <a href="brunch/diary/brunch sub 0004.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
+              <img src="image/brunch/snake.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title3" class="larger-text">
+          <h3>꽃봉우리.. 봄이다..</h3>
+          <a href="brunch/diary/brunch sub 0003.html" target="_blank"> 2024년4월23일 화요일 일기 바로가기<br><br>
+              <img src="image/brunch/babyflower.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title2" class="larger-text">
+          <h3>삼성 세탁기 설치</h3>
+          <a href="brunch/diary/brunch sub 0002.html" target="_blank"> 2024년4월22일 월요일 일기 바로가기<br><br>
+              <img src="image/brunch/washer.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+          </a>
+        </li>
+
+        <li id="title1" class="larger-text">
+          <h3>골프 (Fox Hills Classic)</h3>
+          <a href="brunch/diary/brunch sub 0001.html" target="_blank"> 2024년4월21일 일요일 일기 바로가기<br><br>
+              <img src="image/brunch/foxhills.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+          </a>
         </li>
 
         <!-- ... (생략) ... -->
