--- a/brunch.html
+++ b/brunch.html
@@ -203,7 +203,7 @@
     <section>
       <ul>
         <li id="title22" class="larger-text">
-          <h3>고장 난 천장 팬을 고치다.</h3>    
+          고장 난 천장 팬을 고치다.<br>   
           <a href="brunch/diary/brunch sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 일기 바로가기<br><br>
               <img src="image/brunch/20240513_fan3.jpg" alt="천장 팬 타이틀" width="100%">
           </a>
