--- a/brunch.html
+++ b/brunch.html
@@ -203,14 +203,14 @@
     <section>
       <ul>
         <li id="title22" class="larger-text">
-          고장 난 천장 팬을 고치다.<br>   
+          <strong>고장 난 천장 팬을 고치다.</strong><br>   
           <a href="brunch/diary/brunch sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 일기 바로가기<br><br>
               <img src="image/brunch/20240513_fan3.jpg" alt="천장 팬 타이틀" width="100%">
           </a>
         </li>
 
         <li id="title21" class="larger-text">
-          <h3>딸과 함께한 행복한 골프 데이트</h3>    
+          <strong>딸과 함께한 행복한 골프 데이트</strong><br>  
           <a href="brunch/diary/brunch sub 20240512_02.html" target="_blank"> 2024년5월12일 일요일 일기 바로가기<br><br>
               <img src="image/brunch/20240512_golf.jpg" alt="딸과 함께한 행복한 골프 데이트" width="100%">
           </a>
