--- a/AI_News.html
+++ b/AI_News.html
@@ -173,6 +173,7 @@
     <h1>인공지능 뉴스</h1>
     <div class="title-container">
       <ul>
+        <li><a href="#title02">'트랜스포머' 보완할 기술 잇달아 공개…”메모리·시간 축소”</a></li>
         <li><a href="#title01">기사 스토리 입력하면 웹툰 만들어주는 생성 AI 출시</a></li>
       </ul>
       <button class="show-all-button">전체보기</button> <!-- 전체보기 버튼 추가 -->
@@ -181,9 +182,17 @@
   <main>
     <section>
       <ul>
+
+        <li id="title02" class="larger-text">
+          <strong>'트랜스포머' 보완할 기술 잇달아 공개…”메모리·시간 축소”</strong><br>   
+          <a href="ai_news/news/AI_News sub 20240314_01.html" target="_blank"> 2024년3월14일 목요일 뉴스 바로가기<br><br>
+              
+          </a>
+        </li>
+
         <li id="title01" class="larger-text">
           <strong>기사 스토리 입력하면 웹툰 만들어주는 생성 AI 출시</strong><br>   
-          <a href="ai_news/news/AI_News sub 20240401_01.html" target="_blank"> 2024년0월00일 0요일 일기 바로가기<br><br>
+          <a href="ai_news/news/AI_News sub 20240306_01.html" target="_blank"> 2024년3월06일 월요일 뉴스 바로가기<br><br>
               <img src="image/ai_news/ai news sub 20240306_01 lore machine.png" alt="기사 스토리 입력하면 웹툰 만들어주는 생성 AI 출시" width="100%">
           </a>
         </li>
