--- a/AI_News.html
+++ b/AI_News.html
@@ -173,6 +173,9 @@
     <h1>인공지능 뉴스</h1>
     <div class="title-container">
       <ul>
+        <li><a href="#title05">매일경제 “억대 연봉 옛말 됐다”…이 직원 4명분 AI가 도맡아 ‘대규모 칼바람’</a></li>
+        <li><a href="#title04">2024년 가장 많이 사용되는 AI 플랫폼 20개는..</a></li>
+        <li><a href="#title03">"GPT-4 다시 게을러져...클로드 3로 갈아타자" 여론 확산</a></li>
         <li><a href="#title02">'트랜스포머' 보완할 기술 잇달아 공개…”메모리·시간 축소”</a></li>
         <li><a href="#title01">기사 스토리 입력하면 웹툰 만들어주는 생성 AI 출시</a></li>
       </ul>
@@ -182,6 +185,28 @@
   <main>
     <section>
       <ul>
+
+        <li id="title05" class="larger-text">
+          <strong>매일경제 “억대 연봉 옛말 됐다”…이 직원 4명분 AI가 도맡아 ‘대규모 칼바람’</strong><br>   
+          <a href="ai_news/news/AI_News sub 20240306_01.html" target="_blank"> 2024년4월17일 월요일 뉴스 바로가기<br><br>
+              <img src="image/ai_news/ai news sub 20240306_01 lore machine.png" alt="기사 스토리 입력하면 웹툰 만들어주는 생성 AI 출시" width="100%">
+          </a>
+        </li>
+
+
+        <li id="title04" class="larger-text">
+          <strong>2024년 가장 많이 사용되는 AI 플랫폼 20개는..</strong><br>   
+          <a href="ai_news/news/AI_News sub 20240306_01.html" target="_blank"> 2024년4월14일 월요일 뉴스 바로가기<br><br>
+              <img src="image/ai_news/ai news sub 20240306_01 lore machine.png" alt="기사 스토리 입력하면 웹툰 만들어주는 생성 AI 출시" width="100%">
+          </a>
+        </li>
+
+        <li id="title03" class="larger-text">
+          <strong>"GPT-4 다시 게을러져...클로드 3로 갈아타자" 여론 확산</strong><br>   
+          <a href="ai_news/news/AI_News sub 20240306_01.html" target="_blank"> 2024년3월29일 월요일 뉴스 바로가기<br><br>
+              <img src="image/ai_news/ai news sub 20240306_01 lore machine.png" alt="기사 스토리 입력하면 웹툰 만들어주는 생성 AI 출시" width="100%">
+          </a>
+        </li>
 
         <li id="title02" class="larger-text">
           <strong>'트랜스포머' 보완할 기술 잇달아 공개…”메모리·시간 축소”</strong><br>   
@@ -201,7 +226,7 @@
     </section>     
   </main>
   <footer>
-    © 2023~2024 Brunch. All rights reserved.
+    © 2023~2024 AI NEWS. All rights reserved.
     <a href="mailto:stberry7@gmail.com?subject=Hello&amp;body=Nice%20to%20meet%20you">Email me</a>
   </footer>
 
