--- a/AI_News.html
+++ b/AI_News.html
@@ -199,15 +199,15 @@
 
         <li id="title12" class="larger-text">
           <strong>OpenAI의 최신 AI 챗봇 모델인 GPT-4o가 출시</strong><br>   
-          <a href="ai_news/news/AI_News sub 20240417_01.html" target="_blank"> 2024년5월13일 월요일 뉴스 바로가기<br><br>
-              
+          <a href="ai_news/news/AI_News sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 뉴스 바로가기<br><br>
+          <img src="image/ai_news/ai news sub 20240514_01.jpeg" alt="OpenAI의 최신 AI 챗봇 모델인 GPT-4o가 출시" width="100%">
           </a>
         </li>
 
         <li id="title11" class="larger-text">
           <strong>초고속, 초정밀 움직임을 보여주는 휴머노이드 로봇 영상이 화제</strong><br>   
           <a href="ai_news/news/AI_News sub 20240428_03.html" target="_blank"> 2024년4월28일 월요일 뉴스 바로가기<br><br>
-              
+          <img src="image/ai_news/ai news sub 20240428_03_Animdated.gif" alt="초고속, 초정밀 움직임을 보여주는 휴머노이드 로봇 영상이 화제" width="100%">
           </a>
         </li>
 
