--- a/AI_News.html
+++ b/AI_News.html
@@ -207,7 +207,9 @@
         <li id="title11" class="larger-text">
           <strong>초고속, 초정밀 움직임을 보여주는 휴머노이드 로봇 영상이 화제</strong><br>   
           <a href="ai_news/news/AI_News sub 20240428_03.html" target="_blank"> 2024년4월28일 월요일 뉴스 바로가기<br><br>
+          <div class="gif-container">
           <img src="image/ai_news/ai news sub 20240428_03_Animdated.gif" alt="초고속, 초정밀 움직임을 보여주는 휴머노이드 로봇 영상이 화제" width="100%">
+        </div>
           </a>
         </li>
 
